--- a/src/components/company/Company.scss
+++ b/src/components/company/Company.scss
@@ -1,12 +1,22 @@
 .company {
+  h1 {
+    padding: 40px 0 30px 0;
+    font-size: 32px;
+    font-weight: 600;
+    text-align: center;
+    span {
+      color: #ef7c00;
+    }
+  }
   .company-content {
-    h1 {
-      font-size: 32px;
-      font-weight: 600;
-      text-align: center;
-      span {
-        color: #ef7c00;
-      }
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    .texts {
+      max-width: 552px;
+      display: flex;
+      flex-direction: column;
+      gap: 16px;
     }
   }
 }
