--- a/src/components/company/Company.scss
+++ b/src/components/company/Company.scss
@@ -10,8 +10,28 @@
   }
   .company-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    .company-img {
+      background-image: url(/images/company-img.png);
+      // width: 100%;
+      width: clamp(200px, 100%, 600px);
+      background-repeat: no-repeat;
+      height: 300px;
+      background-size: cover;
+      i {
+        font-size: 74px;
+        display: grid;
+        place-items: center;
+        color: #ef7c00;
+        padding-top: 20%;
+        &:hover {
+          color: #fcae5b;
+          // color: crimson;
+          transition: 0.3s;
+        }
+      }
+    }
     .texts {
       max-width: 552px;
       display: flex;
