--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -24,46 +24,18 @@ button {
 }
 
 .dark {
-  background: black !important;
+  background: rgb(3, 3, 67) !important;
+  header {
+    background-color: rgb(3, 3, 67);
+    transition: 1s ease-in-out;
+  }
+  transition: 1s ease-in-out;
 }
 
 .dark * {
-  color: white !important;
-}
-
-.menu {
-  border: 0;
-  background: transparent;
-  display: none;
-  cursor: pointer;
-}
-
-@media (max-width: 576px) {
-  .nav-items {
-    flex-direction: column;
-    gap: 24px;
-    position: fixed;
-    top: 80px;
-    left: -100%;
-    width: 100%;
-    height: calc(100vh - 104px);
-    background: #fff;
-    padding: 60px 0;
-    transition: all 0.3s ease-in-out;
-    z-index: 10;
-    hr {
-      display: none;
-    }
-  }
-  .menu {
-    display: block;
-  }
-
-  .open .nav-items {
-    left: 0;
-  }
-
-  .open {
-    box-shadow: none;
+  transition: 1s ease-in-out;
+  color: #ef7c00 !important;
+  button {
+    color: #fff !important;
   }
 }
