--- a/src/components/company/Company.scss
+++ b/src/components/company/Company.scss
@@ -12,6 +12,8 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
+    row-gap: 30px;
     .company-img {
       background-image: url(/images/company-img.png);
       // width: 100%;
