--- a/src/components/sertificate/Sertificate.scss
+++ b/src/components/sertificate/Sertificate.scss
@@ -10,9 +10,12 @@
   }
   .seer-content {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     padding-top: 20px;
+    flex-wrap: wrap;
+    row-gap: 30px;
+    column-gap: 10px;
     i {
       color: #bfc1c7;
       font-size: 50px;
@@ -24,5 +27,11 @@
     place-items: center;
     font-size: 70px;
     color: #ef7c00;
+  }
+}
+
+@media (max-width: 1160px) {
+  .seer .seer-content i {
+    display: none;
   }
 }
